Fixed CSS for "<small>", "<code>", "<kbd>" and "<samp>". They should not break the VR.

--- a/src/app/styles/base/typography.css
+++ b/src/app/styles/base/typography.css
@@ -128,8 +128,8 @@ small,
 code,
 kbd,
 samp {
-  line-height: inherit;
-  vertical-align: bottom;
+  line-height: 1;
+  vertical-align: baseline;
 }
 
 label,
